--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "git-cz": "^4.9.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/git-cz"
+    }
   }
 }
